--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -18,6 +18,8 @@
         <button class="btn btn-info my-3" id="submitFile" onclick="submitFile()"> Submit File</button>
         <button id="Upload" class="btn btn-light  col-lg-7 col-10 mt-2">Submit ToDo</button>
         <button id="Sign" class="btn btn-light  ">Sign Out</button>
+      <div id="display mt-5"></div>
+
     </div>
     
 
@@ -38,7 +40,8 @@
           projectId: "live-coding-test-2",
           storageBucket: "live-coding-test-2.appspot.com",
           messagingSenderId: "19019973694",
-          appId: "1:19019973694:web:a593f73e99b74691c37d6f"
+          appId: "1:19019973694:web:a593f73e99b74691c37d6f",
+          databaseURL: "https://febuary-2024-project-default-rtdb.firebaseio.com"
         };
         // getDownloadURL , getStorage, ref as storeRef ,
         // Initialize Firebase
