--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -70,7 +70,7 @@
   let time = new Date().toLocaleTimeString()
   let date = new Date().toLocaleDateString()
   let inputOne = document.getElementById("todo").value
-  let inputTwo = document.getElementById("todoDes").value
+  let inputTwo = document.getElementById("tododes").value
   let display = document.getElementById("display")
 
   if(inputOne == '' || inputTwo == ''){
