--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -41,7 +41,7 @@
           storageBucket: "live-coding-test-2.appspot.com",
           messagingSenderId: "19019973694",
           appId: "1:19019973694:web:a593f73e99b74691c37d6f",
-          databaseURL: "https://febuary-2024-project-default-rtdb.firebaseio.com"
+          databaseURL: "https://live-coding-test-2-default-rtdb.firebaseio.com/"
         };
         // getDownloadURL , getStorage, ref as storeRef ,
         // Initialize Firebase
