--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -18,7 +18,7 @@
         <button class="btn btn-info my-3" id="submitFile" onclick="submitFile()"> Submit File</button>
         <button id="Upload" class="btn btn-light  col-lg-7 col-10 mt-2">Submit ToDo</button>
         <button id="Sign" class="btn btn-light  ">Sign Out</button>
-      <div id="display mt-5"></div>
+      <div id="display"></div>
 
     </div>
     
