--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -29,7 +29,7 @@
     <script type="module">
         // Import the functions you need from the SDKs you need
         import { initializeApp } from "https://www.gstatic.com/firebasejs/10.8.1/firebase-app.js";
-        import { getAuth,signOut  } from "https://www.gstatic.com/firebasejs/10.8.1/firebase-auth.js";
+        import { getAuth,onAuthStateChanged,signOut  } from "https://www.gstatic.com/firebasejs/10.8.1/firebase-auth.js";
         import {getDatabase ,ref,set,onValue } from  "https://www.gstatic.com/firebasejs/10.8.1/firebase-database.js"
         import {getStorage,ref as stef } from  "https://www.gstatic.com/firebasejs/10.8.1/firebase-storage.js"
 
@@ -78,39 +78,57 @@
   if(inputOne == '' || inputTwo == ''){
     alert("Fill something inside of me naw")
 
-  }else{
+      }else{
     let obj = {time,date,inputOne,inputTwo}
     let dRef = ref(database,'todos/1')
     // document.getElementById("todo").value = ""
     // document.getElementById("todoDes").value = ""
     let saved = set(dRef,obj)
-    if (saved){
+     const item = ref(database, 'todos/1');
+    const refe = onValue(item, (earth) => {
+      const data = earth.val();
+      const update = updateStarCount(display, data);
+      update()
+    });
+      }
+    if(saved){
       console.log("saved successfully");
-      display.innerHTML = 
-      `
-      <h1 class="text-center text-decoration-underline">To-do lists</h1>
-      <h3>To-do:${inputOne}</h3>
-      <h3>To-do description:${inputTwo}</h3>
-       <p>${date}       ${time}</p> `
+      display.innerHTML += `
+  <h3>To-do: ${inputOne}</h3>
+  <h3>To-do description: ${inputTwo}</h3>
+  <p>${date} ${time}</p>
+`;
+
+
     }else{
       console.error("put in something");
     }
+
+   
     // console.log(time,date,inputOne,inputTwo);
-  }
+
 
         })
 
-        const submitFile = () =>{
-  // alert("Na File")
-  let incomingFile = document.getElementById("filey").files[0]
-  console.log(incomingFile);
-  onAuthStateChanged(auth, (user) => {
-  let fieldUser = user.displayName
-  console.log(fieldUser);
-  let storageRef = stef
-});
-}
-window.submitFile = submitFile
+        const submitFile = () => {
+  const incomingFile = document.getElementById("filey").files[0];
+  if (incomingFile) {
+    const user = auth.currentUser;
+    if (user) {
+      const storageRef = stef(storage, `${user.uid}/${incomingFile.name}`);
+      // Upload file to Firebase Storage
+      // ...
+
+    } else {
+      console.error("User not authenticated");
+    }
+  } else {
+    console.error("No file selected");
+  }
+};
+
+window.submitFile = submitFile;
+
 
       </script>
 </body>
